Fixed .isBlank()